# ghostrynox

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/core/: categories.h  command_queue.h  module.h  module_manager.h  self_destruct.h  settings.h
client/include/core/hooking/: hook.h
client/include/core/jni/: jni.h  jni_helper.h  jni_md.h  jni_wrapper.h  jvmti.h
client/include/gui/: gui_controller.h
client/include/modules/: sprint.h
client/src/: main.cpp
client/src/core/: module.cpp  module_manager.cpp  self_destruct.cpp
client/src/core/hooking/: hook.cpp  hook_x86_64.cpp
client/src/core/jni/: jni_helper.cpp
client/src/gui/: GuiController.mm
client/src/modules/: sprint.cpp
include/: jvmti.h
src/: Rynox.cpp  Rynox.h
